# image_recognition

./: .clang-format  .gitignore  README.md
.github/workflow/: whole.yml
.github/workflows/: c-cpp.yml  colcon.yml  foxy.yml  humble.yml  image_recognition_msgs.yml  lint.yml
docs/: opencv_install_guide.md
image_projection/dual_fisheye_camera/: CMakeLists.txt  package.xml
image_projection/dual_fisheye_camera/config/: sample_insta360_air.yaml  sample_insta360_air_info.yaml  sample_insta360_air_left_info.yaml
image_projection/dual_fisheye_camera/include/dual_fisheye_camera/: image_ctrl.hpp  image_undistort.hpp
image_projection/dual_fisheye_camera/launch/: dual_fisheye_camera_control.py  fisheye_image_conrol_exec.py  image_undistort_node.launch.py  sample_insta360_air.py  sample_insta360_air_undistort.launch.py
image_projection/dual_fisheye_camera/src/: image_ctrl.cpp  image_undistort.cpp
image_projection/image_to_ros2_topic/: README.md  package.xml  setup.cfg  setup.py
image_projection/image_to_ros2_topic/image_to_ros2_topic/: image_to_ros2_topic_node.py
image_projection/image_to_ros2_topic/launch/: image_to_topic.py
image_projection/pan_tilt_camera/: CMakeLists.txt  README.md  package.xml
image_projection/pan_tilt_camera/include/pan_tilt_camera/: joy_to_pan_tilt_node.hpp  pan_tilt_camera_node.hpp
image_projection/pan_tilt_camera/launch/: joy_pan_tilt_control.py  pan_tilt_camera.py
image_projection/pan_tilt_camera/src/: joy_to_pan_tilt_node.cpp  pan_tilt_camera_node.cpp  usb_camera.cpp
image_projection/usb_camera/: CMakeLists.txt  README.md
image_projection/usb_camera/config/: camera_config.yaml
image_projection/usb_camera/include/usb_camera/: usb_camera.hpp  usb_camera_node.hpp
image_projection/usb_camera/launch/: usb_camera_launch.py
image_projection/usb_camera/src/: usb_camera.cpp  usb_camera_node.cpp  usb_camera_viewer.cpp
image_projection/video_to_ros2_topic/: README.md  package.xml  setup.cfg  setup.py
image_projection/video_to_ros2_topic/launch/: video_to_topic.py
image_projection/video_to_ros2_topic/video_to_ros2_topic/: video_to_ros2_topic_node.py
image_recognition/yolo_detection/: README.md  package.xml  setup.cfg  setup.py
image_recognition/yolo_detection/launch/: yolo_detection_launch.py
image_recognition/yolo_detection/yolo_detection/: yolo_detection_node.py
image_recognition/yolo_segmentaion/: README.md  package.xml
image_recognition/yolo_segmentaion/launch/: yolo_segmentation_launch.py
image_recognition/yolo_segmentation/: README.md  setup.cfg  setup.py
image_recognition/yolo_segmentation/launch/: yolo_segmentation_launch.py
image_recognition/yolo_segmentation/yolo_segmentation/: yolo_segmentation_node.py
image_recognition/yolov8_detection/: README.md  package.xml  setup.cfg  setup.py
image_recognition/yolov8_detection/launch/: yolov8_detection_launch.py
image_recognition/yolov8_detection/yolov8_detection/: yolov8_detection_node.py
image_recognition_msgs/: CMakeLists.txt  README.md  package.xml
image_recognition_msgs/msg/: BoundingBoxMsgs.msg  BoxMsgs.msg  CameraInfoMsgs.msg  CoordinateMsgs.msg  ImageCtrlMsgs.msg  PanTiltMsgs.msg  PanTiltStatusMsgs.msg  SegmentationMsgs.msg  VideoDeviceCtrlMsgs.msg
udev/: 99-insta360-air.rules  99-insta360-link.rules
usb_camera/: CMakeLists.txt  README.md  package.xml
usb_camera/config/: camera_config.yaml
usb_camera/include/usb_camera/: usb_camera_node.hpp  usb_camera_viewer.hpp
usb_camera/launch/: image_viewer.py  usb_camera_launch.py
usb_camera/src/: usb_camera_node.cpp  usb_camera_viewer.cpp
usb_camera_utils/: CMakeLists.txt  package.xml
usb_camera_utils/include/usb_camera_utils/: usb_camera_utils.hpp
usb_camera_utils/src/: usb_camera_utils.cpp
