<?xml version="1.0"?>
<package format="3">
  <name>image_recognition_msgs</name>
  <version>0.0.1</version>
  <description>Image Recognition Msgs Package</description>
  <maintainer email="menggu1234@naver.com">mjlee111</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geomety_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
