<?xml version="1.0"?>
<package format="3">
  <name>usb_camera</name>
  <version>0.0.1</version>
  <description>USB Camera ROS2 Node</description>
  <maintainer email="menggu1234@naver.com">mjlee111</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
