<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov8_detection</name>
  <version>0.0.1</version>
  <description>Image recognition package using YoloV8</description>
  <maintainer email="menggu1234@naver.com">mjlee111</maintainer>
  <license>Apache2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_recognition_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ultralytics</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
